# AlphaPlot

./: .clang-format  .qmake.stash  .travis.yml  AlphaPlot.pro  CHANGES  CMakeLists.txt  Changelog  Doxyfile  Doxyversion  INSTALL.html  LICENSE  README  README.html  README.installer  README.md  alphaplot.pro  appicons.qrc  basic.pri  build.bat  common.pri  compileTest.sh  config.pri  icons.qrc  installDoxyDocs  makeMsi.sh  makeVersion.sh  mkMacDist.sh  qtiplot.css  qtiplot.pro  qwtplot3d-static-build.patch  scidavis.pro  scidavis_modular.pro  scidavis_temporary.pro  sourcefiles.pri
alphaplot/src/: About.cpp  About.ui  ApplicationWindow.cpp  ApplicationWindow.cpp.autosave  ApplicationWindow.h  ApplicationWindow.ui  ArrowMarker.cpp  ArrowMarker.h  AssociationsDialog.cpp  AssociationsDialog.h  AxesDialog.cpp  AxesDialog.h  BoxCurve.cpp  CMakeLists.txt  CanvasPicker.cpp  ColorBox.cpp  ColorBox.h  ColorButton.h  ColorMapEditor.cpp  ColorMapEditor.h  ConfigDialog.cpp  ConfigDialog.h  Convolution.cpp  Correlation.cpp  CurveRangeDialog.cpp  CurveRangeDialog.h  CurvesDialog.cpp  CurvesDialog.h  DataPickerTool.cpp  DataPickerTool.h  DataSetDialog.cpp  DataSetDialog.h  ErrDialog.cpp  ErrDialog.h  ExpDecayDialog.h  ExponentialFit.cpp  ExportDialog.cpp  ExtensibleFileDialog.cpp  FFT.cpp  FFT.h  (+103 more)
alphaplot/src/2Dplot/: Axis2D.cpp  Axis2D.h  AxisRect2D.cpp  AxisRect2D.h  Bar2D.cpp  Bar2D.h  Channel2D.cpp  Channel2D.h  ColorMap2D.cpp  ColorMap2D.h  Curve2D.cpp  Curve2D.h  DataManager2D.cpp  DataManager2D.h  ErrorBar2D.cpp  ErrorBar2D.h  Graph2DCommon.h  Grid2D.cpp  Grid2D.h  GridPair2D.cpp  GridPair2D.h  ImageItem2D.cpp  ImageItem2D.h  Layout2D.cpp  Layout2D.h  LayoutGrid2D.cpp  LayoutGrid2D.h  LayoutInset2D.cpp  LayoutInset2D.h  Legend2D.cpp  Legend2D.h  LineItem2D.cpp  LineItem2D.h  LineScatter2D.cpp  LineScatter2D.h  LineScatterCommon.h  LineSpecial2D.cpp  LineSpecial2D.h  PickerTool2D.cpp  PickerTool2D.h  (+17 more)
alphaplot/src/2Dplot/widgets/: AddAxisWidget.h  AddPlot2DDialog.cpp  AddPlot2DDialog.h  ArrangeLegend2D.cpp  ArrangeLegend2D.h  Axis2DPropertiesDialog.cpp  Axis2DPropertiesDialog.h  ErrDialog.cpp  (+17 more)
alphaplot/src/3Dplot/: Bar.cpp  Bar.h  Bar3D.cpp  Bar3D.h  Cone3D.cpp  Cone3D.h  Custom3DInteractions.cpp  Custom3DInteractions.h  DataManager3D.cpp  DataManager3D.h  Graph3D.cpp  Graph3D.h  Graph3DCommon.h  Layout3D.cpp  Layout3D.h  Plot3DDialog.cpp  Plot3DDialog.h  Scatter3D.cpp  Scatter3D.h  Surface3D.cpp  Surface3D.h  SurfaceDialog.cpp  SurfaceDialog.h  TextDialog.cpp  TextDialog.h
alphaplot/src/analysis/: CMakeLists.txt  Convolution.cpp  Correlation.cpp  Correlation.h  Differentiation.cpp  Differentiation.h  ExpDecayDialog.cpp  ExponentialFit.cpp  ExponentialFit.h  FFT.cpp  FFT.h  FFTDialog.cpp  FFTDialog.h  FFTFilter.cpp  Filter.cpp  Filter.h  Fit.cpp  Fit.h  FitDialog.cpp  FitDialog.h  IntDialog.cpp  IntDialog.h  Integration.cpp  Interpolation.cpp  Interpolation.h  InterpolationDialog.cpp  MultiPeakFit.cpp  MultiPeakFit.h  NonLinearFit.cpp  NonLinearFit.h  PluginFit.cpp  PluginFit.h  PolynomFitDialog.cpp  PolynomFitDialog.h  PolynomialFit.cpp  PolynomialFit.h  SigmoidalFit.cpp  SigmoidalFit.h  SmoothCurveDialog.cpp  SmoothCurveDialog.h  (+5 more)
alphaplot/src/core/: AppearanceManager.cpp  AppearanceManager.h  AprojHandler.cpp  AprojHandler.h  CMakeLists.txt  IconLoader.cpp  IconLoader.h  Utilities.cpp  Utilities.h
alphaplot/src/future/: CMakeLists.txt
alphaplot/src/plotcommon/: CMakeLists.txt
alphaplot/src/scripting/: MuParserScript.cpp  MuParserScript.h  MuParserScripting.cpp  MuParserScripting.h  MyParser.cpp  MyParser.h  Script.cpp  ScriptEdit.cpp  ScriptEdit.h  ScriptingEnv.cpp  ScriptingEnv.h  ScriptingFunctions.h  ScriptingLangDialog.cpp  ScriptingLangDialog.h
alphaplot/src/toport/: Differentiation.cpp  Differentiation.h  ExpDecayDialog.cpp  Fit.cpp  Fit.h  FitDialog.cpp  FitDialog.h  IntDialog.cpp  IntDialog.h  Integration.cpp  InterpolationDialog.cpp  InterpolationDialog.h  MultiPeakFit.cpp  MultiPeakFitTool.cpp  NonLinearFit.h  PluginFit.cpp  PolynomFitDialog.cpp  PolynomFitDialog.h  PolynomialFit.cpp  SigmoidalFit.cpp  SmoothCurveDialog.cpp
alphaplot/src/ui/: CMakeLists.txt  CharacterMapWidget.cpp  CharacterMapWidget.h  ExportDialog.cpp  ExportDialog.h  ExtensibleFileDialog.cpp  ExtensibleFileDialog.h  FittingSettings.cpp  FittingSettings.h  FittingSettings.ui  GeneralApplicationSettings.cpp  GeneralApplicationSettings.h  GeneralApplicationSettings.ui  GeneralAppreanceSettings.cpp  GeneralAppreanceSettings.h  GeneralAppreanceSettings.ui  GeneralConfirmationSettings.cpp  GeneralConfirmationSettings.h  GeneralConfirmationSettings.ui  GeneralNumericFormatSettings.cpp  GeneralNumericFormatSettings.h  GeneralNumericFormatSettings.ui  RandomDistributionDialog.cpp  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  SettingsPage.cpp  SettingsPage.h  TableBasicSettings.cpp  TableBasicSettings.h  TableBasicSettings.ui  TableColorSettings.cpp  TableColorSettings.h  TableColorSettings.ui  TableFontSettings.cpp  TableFontSettings.h  TableFontSettings.ui
alphaplot/src/widgets/: CharacterWidget.cpp  CharacterWidget.h  ColorLabel.cpp  ColorLabel.h  CustomCharacterDialog.cpp  CustomCharacterDialog.h  CustomCharacterDialog.ui  aSettingsListView.cpp
fitPlugins/: CMakeLists.txt  README.txt  libexp_saturation.so.1  libexp_saturation.so.1.0.0  libexplin.so.1.0.0  libfitRational0.so.1  libfitRational0.so.1.0.0  libfitRational1.so.1  libfitRational1.so.1.0.0  libplanck_wavelength.so.1  libplanck_wavelength.so.1.0.0
fitPlugins/exp_saturation/: CMakeLists.txt  Makefile  exp_saturation.c  exp_saturation.pro
fitPlugins/explin/: CMakeLists.txt  Makefile  explin.c  explin.pro
fitPlugins/fitRational0/: CMakeLists.txt  Makefile  fitRational0.cpp  fitRational0.pro
fitPlugins/fitRational1/: CMakeLists.txt  Makefile  fitRational1.cpp  fitRational1.pro
fitPlugins/planck_wavelength/: CMakeLists.txt  Makefile  planck_wavelength.c  planck_wavelength.pro
test/: CMakeLists.txt  Histo.opj  readWriteProject.cpp  readWriteProject.h  test.pro  testProject.aproj  testProject.sciprj
test/00/: t0001a.sh
(+2280 files in other folders)
